(lang dune 3.17)

(name chip8)

(generate_opam_files true)

(source
 (github paolobroglio/chip8))

(authors "Paolo Broglio <paolobroglio@pm.me>")

(maintainers "Paolo Broglio <paolobroglio@pm.me>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name chip8)
 (synopsis "Chip8 Emulator")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
